Fix width adjust to display on IE
Fixes #611

--- a/src/ui/react/src/assets/sass/components/ae-toolbar/structure.scss
+++ b/src/ui/react/src/assets/sass/components/ae-toolbar/structure.scss
@@ -1,5 +1,5 @@
 #{$IE10-PLUS}::-ms-reveal, [class^=ae-toolbar] {
-    height: $toolbar-button-height;
+    height: auto;
     box-sizing: content-box;
 }
 
@@ -51,4 +51,9 @@
         height: $toolbar-add-height;
         width: $toolbar-add-width;
     }
+}
+
+.ae-toolbar-styles {
+    box-sizing: border-box;
+    max-width: 100%;
 }
